# systems_programming_summer-2025

./: README.md
Homework_assignments/Module_1/src/: main.rs
Homework_assignments/Module_2/: Cargo.toml
Homework_assignments/Module_2/src/: main.rs
Homework_assignments/Module_3/: Cargo.toml
Homework_assignments/Module_3/src/: main.rs
Homework_assignments/Website_Checker/: Cargo.toml  urls.txt
Homework_assignments/Website_Checker/Tests/: integration.rs
Homework_assignments/Website_Checker/src/: lib.rs  main.rs
Homework_assignments/stock-data-fetcher/: Cargo.toml  btc.csv  eth.csv  sp500.csv
Homework_assignments/stock-data-fetcher/src/: main.rs
In-class_Assignments/Generics/src/: main.rs
rustprogramming/Module1IntroProgramming/: 09rust-assignments.md
rustprogramming/SummerModule9SoftwareEngineering/: 02rust-debugging-systems-programming.md
