[package]
name = "Website_Checker"
version = "0.1.0"
edition = "2024"

[lib]
name = "website_checker"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
crossbeam-channel = "0.5"
ctrlc = "3"
reqwest = {version = "0.12", features = ["blocking", "rustls-tls"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
httpmock = "0.7"